# hollow-grid-py

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/scripts/: dispatch-fleet-verdigris-roll.sh
.github/workflows/: ci.yml  code-coverage.yml  release.yml
docs/: ARCHITECTURE.md  PLAN.md  WORLD.md
hollow_grid/: __init__.py  __main__.py  event.py  store.py
hollow_grid/auth/: __init__.py  passphrase.py
hollow_grid/grid/: __init__.py  async_rpc.py  local_hub.py  open.py  remote.py  sync.py
hollow_grid/tests/: test_federation.py  test_federation_cast.py  test_grid_sync.py  test_remote.py  test_sanitize.py  test_transport.py  test_webclient.py
hollow_grid/transport/: federation.py  gameplay.py  hub.py  mapsvg.py  sanitize.py  server.py  session.py  webclient.py
hollow_grid/world/: __init__.py  brand.py  endgame.py  items.py  map_seed.py  mobs.py  model.py  races.py  regard.py  signs.py  transmissions.py
