[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hollow-grid-py"
version = "0.1.0"
description = "Python world-server port for The Hollow Grid federated MUD."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Conrad Rockenhaus", email = "conrad@skyphusion.org" }]
keywords = ["mud", "game", "websocket", "federation", "hollow-grid"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Role-Playing",
]
# One runtime dep mirrors hollow-grid-go's single websocket dependency.
dependencies = ["websockets>=14.0"]

[project.optional-dependencies]
dev = ["mypy>=1.8"]

[project.scripts]
hollow-grid-world = "hollow_grid.__main__:main"

[project.urls]
Homepage = "https://github.com/skyphusion-labs/hollow-grid-py"
Repository = "https://github.com/skyphusion-labs/hollow-grid-py"
Documentation = "https://github.com/skyphusion-labs/the-hollow-grid/blob/main/docs/protocol.md"
Issues = "https://github.com/skyphusion-labs/hollow-grid-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hollow_grid*"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
files = ["hollow_grid"]
exclude = "hollow_grid/tests/"
